add a no-go result about Kervaire

--- a/finite.tex
+++ b/finite.tex
@@ -1395,7 +1395,7 @@ The second solution of the Hopf invariant one problem, due to Adams and Atiyah, 
 \end{remark}
 
 \begin{remark}
-This method is nonconstructive, in the sense that we learn that the classes \(h_j\) must participate in \(\HFtwo\)--Adams differentials, but we do not know what those differentials are.  By wholly different means~\cite[Corollary VI.1.5]{BMMS}, one can show for all \(j\) the differential \[d_2 h_j = h_0 h_{j-1}^2,\] and the accident is that the right-hand side of the equation happens to be zero for \(j \le 3\).  However, because we are working in characteristic \(2\), the existence of these differentials gives no information about the survival of the classes \(h_j^2\), sometimes referred to as the ``(Arf--)Kervaire invariant one problem''.\footnote{Remarkably, just as the Hopf invariant one problem finds geometric application in the question of \(H\)--space structures on spheres, the Kervaire invariant one problem predicts the existence of certain nonsmoothable manifolds~\cite{Browder}.}  Its recent solution by Hill, Hopkins, and Ravenel~\cite{HHR} follows in the footsteps of previous work by Ravenel~\cite{RavenelNonexistenceArfInvariantElts}, and one of the crucial leaps forward is the serious employ of the theory of abelian varieties~\cite{MoravaAbVarsAndKervaire}.
+This method is nonconstructive, in the sense that we learn that the classes \(h_j\) must participate in \(\HFtwo\)--Adams differentials, but we do not know what those differentials are.  By wholly different means~\cite[Corollary VI.1.5]{BMMS}, one can show for all \(j\) the differential \[d_2 h_j = h_0 h_{j-1}^2,\] and the accident is that the right-hand side of the equation happens to be zero for \(j \le 3\).  However, because we are working in characteristic \(2\), the existence of these differentials gives no information about the survival of the classes \(h_j^2\), sometimes referred to as the ``(Arf--)Kervaire invariant one problem''.\footnote{Remarkably, just as the Hopf invariant one problem finds geometric application in the question of \(H\)--space structures on spheres, the Kervaire invariant one problem predicts the existence of certain nonsmoothable manifolds~\cite{Browder}.}  Its recent solution by Hill, Hopkins, and Ravenel~\cite{HHR} follows in the footsteps of previous work by Ravenel~\cite{RavenelNonexistenceArfInvariantElts}, and one of the crucial leaps forward is the serious employ of the theory of abelian varieties~\cite{MoravaAbVarsAndKervaire}.\footnote{\(\moduli{fg}\) and the \(MU\)--Adams spectral sequence are not enough~\cite[Section 8.F]{MRW}.}
 \end{remark}
 
 
