include MRW citation for product names

--- a/finite.tex
+++ b/finite.tex
@@ -241,7 +241,7 @@ The context for \(MUP\) is considerably more complicated, but Quillen's theorem 
 \begin{sidewaysfigure}
 \centering
 \input{anss2.tex}
-\caption{A small piece of the \(MU_{(2)}\)--Adams spectral sequence for the sphere, beginning at the second page~\cite[pg.\ 429]{RavenelNovicesGuide}.  North-east lines denote multiplication by \(\eta = \alpha_1\), north-west lines denote \(d_3\)--differentials, and vertical dotted lines indicate additive extensions.  Elements are labeled according to the conventions of \Cref{GreekLetterElements}, and in particular \(\alpha_{i/j}\) is \(2^j\)--torsion.}\label{ANSS2Figure}
+\caption{A small piece of the \(MU_{(2)}\)--Adams spectral sequence for the sphere, beginning at the second page~\cite[pg.\ 429]{RavenelNovicesGuide}, \cite{MRW}.  North-east lines denote multiplication by \(\eta = \alpha_1\), north-west lines denote \(d_3\)--differentials, and vertical dotted lines indicate additive extensions.  Elements are labeled according to the conventions of \Cref{GreekLetterElements}, and in particular \(\alpha_{i/j}\) is \(2^j\)--torsion.}\label{ANSS2Figure}
 \end{sidewaysfigure}
 \begin{sidewaysfigure}
 \centering
