significantly improve wishywashiness about H_infty structures on E-theory

--- a/main.bib
+++ b/main.bib
@@ -4202,6 +4202,20 @@ MRREVIEWER = {W. Stephen Wilson},
        URL = {http://www.numdam.org/item?id=CM_1995__96_3_293_0},
 }
 
+@ARTICLE{Zhu,
+   author = {{Zhu}, Y.},
+    title = "{Norm coherence for descent of level structures on formal deformations}",
+  journal = {ArXiv e-prints},
+archivePrefix = "arXiv",
+   eprint = {1706.03445},
+ primaryClass = "math.AT",
+ keywords = {Mathematics - Algebraic Topology, Mathematics - Algebraic Geometry, Mathematics - Number Theory},
+     year = 2017,
+    month = jun,
+   adsurl = {http://adsabs.harvard.edu/abs/2017arXiv170603445Z},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
 @book {ZinkCartierTheory,
     AUTHOR = {Zink, Thomas},
      TITLE = {Cartiertheorie kommutativer formaler {G}ruppen},
