--- a/powerops.tex
+++ b/powerops.tex
@@ -315,31 +315,30 @@ Our last technical remark is that this definition of quotient does, indeed, have
 \begin{lemma}[First isomorphism theorem for formal groups, {\cite{Lubin}, \cite[Theorem 5.3.4]{StricklandFiniteSubgps}}]
 If \(f\co \G \to \widehat{\mathbb H}\) is any isogeny with kernel divisor \(K\), then there is a uniquely specified commuting triangle
 \begin{center}
-\begin{tikzcd}
+\begin{tikzcd}[row sep=1em]
 & \G \arrow["q"']{ld} \arrow["f"]{rd} \\
-\G/K \arrow["g", "\simeq"']{rr} & & \widehat{\mathbb H}.
+\G/K \arrow["g", "\simeq"']{rr} & & \widehat{\mathbb H}. \qed
 \end{tikzcd}
 \end{center}
-\qed
 \end{lemma}
 
 We now use this Lemma, along with properties of the Lubin--Tate moduli problem, to associate endo-isogenies to subgroup divisors.  To begin, consider the multiplication--by--\(p\) endo-isogeny of a Lubin--Tate group \(\G\).  Since \(\G\) is finite height, this map is an isogeny and the Lemma above gives rise to an isomorphism of formal groups
 \begin{center}
-\begin{tikzcd}
+\begin{tikzcd}[row sep=1em]
 & \G \arrow["q"']{ld} \arrow["p"]{rd} \\
 \G/\G[p] \arrow["g", "\simeq"']{rr} & & \G.
 \end{tikzcd}
 \end{center}
 This diagram is one of formal groups, rather than of deformations---the map \(p\co \G \to \G\) does not cover the identity upon reduction to the special fiber.  The Frobenius allows us to correct this to a diagram of deformations:
 \begin{center}
-\begin{tikzcd}
+\begin{tikzcd}[row sep=1em]
 & \G \arrow["q"']{ld} \arrow["p"]{rd} \\
 \G/\G[p] \arrow["g", "\simeq"']{rr} & & (\phi^d)^* \G.
 \end{tikzcd}
 \end{center}
 In particular, this latter diagram shows that the quotient map \(\G / \G[p]\) is \emph{again} a universal deformation, as witnessed by a preferred isomorphism to \(\G\).  For a generic subgroup divisor \(K \le \G\), we have access to the isogeny \(q_K\) using the methods described above, but it is the magic of the Lubin--Tate moduli that furnishes us with replacements for \(p\) and for \(g\).  Notice first that the problem simplifies dramatically for the formal group at the special fiber: all subgroups of the special fiber formal group are of the form \(p^j \cdot [0]\), and hence we can always use the Frobenius map to complete the desired triangle:
 \begin{center}
-\begin{tikzcd}
+\begin{tikzcd}[row sep=1em]
 & \Gamma \arrow["q_{p^j[0]}"']{ld} \arrow["\Frob^j"]{rd} \\
 \Gamma/(p^j\cdot[0]) \arrow["g_{p^j[0]}", "\simeq"']{rr} & & (\phi^j)^* \Gamma,
 \end{tikzcd}
@@ -349,29 +348,29 @@ where \(\phi\co k \to k\) is the Frobenius on coefficients and \(\Frob\co \Gamma
 \begin{lemma}[{\cite[Section 12.3]{AHSHinfty}}]
 Let \(G\) be an infinitesimal deformation of a finite height formal group \(\Gamma\) to a complete local ring \(R\).  Associated to a subgroup divisor \(K \le G\), there is a commuting triangle
 \begin{center}
-\begin{tikzcd}
+\begin{tikzcd}[row sep=1em]
 & G \arrow["q_K"']{ld} \arrow["P_K"]{rd} \\
-G/K \arrow["g_K", "\simeq"']{rr} & & \psi_H^* \G
+G/K \arrow["g_K", "\simeq"']{rr} & & \psi_K^* \G
 \end{tikzcd}
 \end{center}
 for a map \(\psi_K\co \Spf R \to (\moduli{fg})^\wedge_\Gamma\) and \(\G\) the Lubin--Tate universal deformation of \(\Gamma\).
 \end{lemma}
 \begin{proof}
 The main content of the deformation theory of finite height formal groups, recounted in \Cref{SectionMfgSmallScales}, is that there is a natural correspondence between the following two kinds of deformation data:
-\[\left\{\begin{tikzcd}[column sep=0.7em]
+\[\left\{\begin{tikzcd}[column sep=0.7em, row sep=0.7em]
 \Gamma \arrow{d} & i^* \Gamma \arrow{l} \arrow{rd} \arrow[equal, "\alpha"]{r} \arrow[dl, phantom, "\llcorner", very near start] & j^* G \arrow{r} \arrow{d} \arrow[dr, phantom, "\lrcorner", very near start] & G \arrow{d} \\
 \Spec k & & \Spec R/\m \arrow["i"']{ll} \arrow["j"]{r} & \Spf R
 \end{tikzcd}
 \right\}
 \leftrightarrow
-\left\{\begin{tikzcd}[column sep=0.7em]
+\left\{\begin{tikzcd}[column sep=0.7em, row sep=0.7em]
 G \arrow{rd} \arrow[equal, "\beta"]{r} & \psi^* \G \arrow{d} \arrow{r} \arrow[dr, phantom, "\lrcorner", very near start] & \G \arrow{d} \\
 & \Spf R \arrow["\psi"]{r} & (\mathcal M_{\mathbf{fg}})^\wedge_\Gamma
 \end{tikzcd}
 \right\}.\]
 Accordingly, to construct the map \(\psi_K\) from the Lemma statement, we need only exhibit \(G/K\) as belonging to a natural diagram of the sort at left.  Using the fact that finite subgroups of formal groups over a \emph{field} are always of the form \(p^j \cdot [0]\), this is exactly what the Frobenius discussion above accomplishes:
 \begin{center}
-\begin{tikzcd}
+\begin{tikzcd}[row sep=0.7em]
 \Gamma \arrow{d} & (\phi^j)^* \Gamma \arrow{l} \arrow{rd} \arrow[equal, "g_{p^j[0]}"]{r} \arrow[dl, phantom, "\llcorner", very near start] & (j^* G)/p^j\cdot[0] \arrow{r} \arrow{d} \arrow[dr, phantom, "\lrcorner", very near start] & G/K \arrow{d} \\
 \Spec k & & \Spec k \arrow["\phi^j"']{ll} \arrow["j"]{r} & \Spf R.
 \end{tikzcd}
@@ -382,7 +381,7 @@ Transferring this to a diagram of the sort at right, this gives the map \(\psi_K
 Applying this Lemma to the universal case gives the following result:
 
 \begin{corollary}\label{DeterminationOfPowerMaps}
-There is a unique sequence of maps \[P^{\Sigma_{p^k}}\co \G \times \Sub_{p^k} \G \to \psi_{\Sigma_{p^k}}^* \G\] determined by the following properties:
+There is a unique sequence of maps \[P^{\Sigma_{p^k}}\co \G \times \Sub_{p^k} \G \to \psi_{p^k}^* \G\] determined by the following properties:
 \begin{enumerate}
     \item Restricting to any point in \(\Sub_{p^k} \G\) gives a group homomorphism with that kernel.
     \item (\textit{Deformation of Frobenius}:) At the special fiber, \(P^{\Sigma_{p^k}}\) reduces to the \(k\){\th} Frobenius iterate.
@@ -390,14 +389,14 @@ There is a unique sequence of maps \[P^{\Sigma_{p^k}}\co \G \times \Sub_{p^k} \G
 \end{enumerate}
 \end{corollary}
 
-Amazingly, this is exactly the behavior of any theory of \index{power operation}power operations for \(E\)--theory when applied to \(\CP^\infty\).  An \(H_\infty\) structure on Morava \(E\)--theory has a \(\Sigma_{p^k}\)--power operation map \[E^0 \CP^\infty \otimes E^0 B\Sigma_{p^k} \from E^0 \CP^\infty,\] which becomes the following map of formal schemes:
+Amazingly, this is exactly the behavior of any theory of \index{power operation}power operations for \(E\)--theory as applied to \(\CP^\infty\).  An \(H_\infty\) structure on Morava \(E\)--theory carries a \(\Sigma_{p^k}\)--power operation map \[E^0 \CP^\infty \otimes E^0 B\Sigma_{p^k} \from E^0 \CP^\infty,\] which corresponds to a map of formal schemes:
 \begin{center}
 \begin{tikzcd}
 \Spf (E^0 \CP^\infty \otimes E^0 B\Sigma_{p^k} / I_{\Tr}) \arrow{r} \arrow[equal]{d} & \Spf E^0 \CP^\infty \arrow[equal]{d} \\
 \CP^\infty_E \times \Sub_{p^k} \CP^\infty_E \arrow["P^{\Sigma_{p^k}}"]{r} & \CP^\infty_E.
 \end{tikzcd}
 \end{center}
-This becomes an \(E^0\)--algebra map (i.e., a map over \((\moduli{fg})^\wedge_\Gamma\)) when the bottom map is factored as \[\CP^\infty_E \times \Sub_{p^k} \CP^\infty_E \xrightarrow{P^{\Sigma_{p^k}}} \psi_{\Sigma_{p^k}}^* \CP^\infty_E \to \CP^\infty_E.\]  This map has exactly the prescribed kernel, and by its very nature as a \emph{power operation} it reduces to the Frobenius on the special fiber---and thus the unicity of \Cref{DeterminationOfPowerMaps} applies.  Finally, this identification is definitionally compatible with the map sending a power operation to its constituent sum of unstable operations, i.e., the map from the natural \(E_\infty\) context to the unstable context.
+This becomes an \(E^0\)--algebra map (i.e., a map of schemes over \((\moduli{fg})^\wedge_\Gamma\)) when the bottom map is factored as \[\CP^\infty_E \times \Sub_{p^k} \CP^\infty_E \xrightarrow{P^{\Sigma_{p^k}}} \psi_{\Sigma_{p^k}}^* \CP^\infty_E \to \CP^\infty_E.\]  This map has exactly the prescribed kernel, and by its very nature as a \emph{power operation} it reduces to the Frobenius on the special fiber---and thus the unicity of \Cref{DeterminationOfPowerMaps} applies.  Finally, this identification is definitionally compatible with the map sending a power operation to its constituent sum of unstable operations, i.e., the map from the natural \(E_\infty\) context to the unstable context.
 
 \begin{remark}[{\cite[1.4.2.3]{CCO}}]
 There is a useful result about isogenies that more topologists ought to be aware of, although it doesn't tie in directly to any of our exposition here.  Nonetheless, we record its statement: for \(R\) a sufficiently nice complete local ring, and for \(\mathbb G\) and \(\mathbb G'\) two \(p\)--divisible groups over \(R\), reduction to the special fiber gives an injection \[\Isog(\mathbb G, \mathbb G') \into \Isog(\mathbb G \times \Spec R/\m, \mathbb G' \times \Spec R/\m).\]
@@ -415,7 +414,7 @@ There is a useful result about isogenies that more topologists ought to be aware
 
 \subsection*{\(H_\infty\)--orientations}
 
-Having worked through enough of the underlying algebra, we now return to our intended topological application of studying \(H_\infty\)--orientations of Morava \(E\)--theory by \(MUP\).  Since we have avoided giving an \(H_\infty\)--structure on \(E\)--theory so far, there are some questions about what this might mean.  To resolve this ambiguity, recall first from \Cref{OmnibusEinftyTheorem} that there exists at least one \(H_\infty\)--ring structure on Morava \(E\)--theory.  Next, notice that the set of \(H_\infty\)--ring maps is a subset of the homotopy classes of maps: those which commute with the \(\Sigma_n\)--power operations on the source and target.  In the case of \(MUP\)--orientations, this has a surprising effect: since an ordinary orientation of \(E\)--theory corresponds to a coordinate on its formal group, the theory of \(H_\infty\)---orientations is therefore insensitive to the behavior of the power operation on spaces other than \(\CP^\infty\).  Additionally, the behavior of any putative theory of power operations on this particular space was totally determined in the previous section.  We therefore need not be more specific.
+Having worked through enough of the underlying algebra, we now return to our intended application: \(H_\infty\) complex-orientations of Morava \(E\)--theory.  As we have avoided endowing \(E\)--theory with an \(H_\infty\)--structure so far, there are some open questions as to what this might mean.  To resolve this ambiguity, recall first from \Cref{OmnibusEinftyTheorem} that there exists at least one \(H_\infty\)--ring structure on Morava \(E\)--theory.  Next, notice that the set of \(H_\infty\)--ring maps is the subset of homotopy classes of ring maps which commute with the \(\Sigma_n\)--power operations on the source and target.  In the case of \(MUP\)--orientations, this has a surprising effect: since an ordinary ring map \(MUP \to E\) corresponds to a map \(\CP^\infty \to E\), the theory of \(H_\infty\)--orientations can be entirely read off from the behavior of the power operations on \(\CP^\infty\).  Additionally, the behavior of \emph{any} putative theory of \(E\)--theoretic power operations on this particular space was totally determined in the previous section.  We therefore need not be more specific.
 
 Beyond these observations, there are two reductions, both due to McClure, that lighten our workload from infinitely many conditions to check to two:
 
