--- a/powerops.tex
+++ b/powerops.tex
@@ -74,7 +74,7 @@ MU[6, \infty)^0(X) \arrow["\phi"]{r} \arrow["P^{\Sigma_n}_{MU[6, \infty)}(X)"]{d
 MU[6, \infty)^0(B\Sigma_n \times X) \arrow["P^{\Sigma_n}(\phi)"]{r} & E^0(B\Sigma_n \times X).
 \end{tikzcd}
 \end{center}
-Before understanding the maps in this commutative diagram, we must understand its nodes.  There is a natural map \[E^0(B\Sigma_n) \otimes_{E^0} E^0(X) \to E^0(B\Sigma_n \times X),\] and whether it is to an equivalence is highly dependent on the structure of \(E^0(B\Sigma_n)\) itself---for instance, this would be the case if \(E^0(B\Sigma_n)\) were flat as an \(E^0\)--module.  For this reason, we are strongly motivated to feel out any foothold on this object that we are able to find, and a critical such foothold is the chromatic character theory of Hopkins, Kuhn, and Ravenel~\cite{HKR}.  Their theorems describe the Morava \(E\)--cohomology of a finite group with certain forms of torsion (e.g., \(p\)--torsion) deleted, and we give an introduction to their results in this Lecture.\footnote{The intrepid reader who finds this material interesting should also look at: the paper by Morava~\cite{MoravaLocalFieldsExtraordinaryKthy}, which discuss much of the same material here in slightly different terms; the paper by Greenlees--Strickland~\cite{GreenleesStrickland}, which discuss a ``transchromatic'' version of these results, where they study the object $i_d^* j_d{}_* (\moduli{fg})^\wedge_\Gamma$ of \Cref{LEFTRealTheoremWithProof}; and the paper by Stapleton~\cite{Stapleton}, which streamlines and generalizes the results of Greenlees--Strickland by invoking the geometry of $p$--divisible groups.}
+Before understanding the maps in this commutative diagram, we must understand its nodes.  There is a natural map \[E^0(B\Sigma_n) \otimes_{E^0} E^0(X) \to E^0(B\Sigma_n \times X),\] and whether it is an equivalence is highly dependent on the structure of \(E^0(B\Sigma_n)\) itself---for instance, this would be the case if \(E^0(B\Sigma_n)\) were flat as an \(E^0\)--module.  For this reason, we are strongly motivated to feel out any foothold on this object that we are able to find, and a critical such foothold is the chromatic character theory of Hopkins, Kuhn, and Ravenel~\cite{HKR}.  Their theorems describe the Morava \(E\)--cohomology of a finite group with certain forms of torsion (e.g., \(p\)--torsion) deleted, and we give an introduction to their results in this Lecture.\footnote{The intrepid reader who finds this material interesting should also look at: the paper by Morava~\cite{MoravaLocalFieldsExtraordinaryKthy}, which discusses much of the same material here in slightly different terms; the paper by Greenlees--Strickland~\cite{GreenleesStrickland}, which discuss a ``transchromatic'' version of these results, where they study the object $i_d^* j_d{}_* (\moduli{fg})^\wedge_\Gamma$ of \Cref{LEFTRealTheoremWithProof}; and the paper by Stapleton~\cite{Stapleton}, which streamlines and generalizes the results of Greenlees--Strickland by invoking the geometry of $p$--divisible groups.}
 
 
 
