add more HS references

--- a/finite.tex
+++ b/finite.tex
@@ -1108,7 +1108,7 @@ A full subcategory of a triangulated category (e.g., the homotopy category of \(
 \noindent Examples of thick subcategories include:
 \begin{itemize}
 \item The category \(\CatOf{C}_d\) of \(p\)--local finite spectra which are \(K(d-1)\)--acyclic.  (For instance, if \(d = 1\), the condition of \(K(0)\)--acyclicity is that the spectrum have purely torsion homotopy groups.)  These are called ``finite spectra of type at least \(d\)''.
-\item The category \(\CatOf{D}_d\) of \(p\)--local finite spectra \(F\) for which there is a self-map \(v: \Susp^N F \to F\), \(N \gg 0\) which induces multiplication by a unit in \(K(d)\)--homology and which is nilpotent in \(K(\ne d)\)--homology.  These are called ``finite spectra admitting \index{vd self map@\(v_d\)--self--map}\(v_d\)--self--maps''.\footnote{It is not obvious that \(\CatOf D_d\) satisfies the cofiber extension axiom of a thick subcategory.  One is required to show that for any map $f\co X \to Y$ of finite complexes of type \(d\), \(v_d\)--self--maps can be chosen on both $X$ and $Y$ which commute with $f$, which is another difficult theorem of Hopkins and Smith~\cite[Theorem 11]{HopkinsSmith}.}
+\item The category \(\CatOf{D}_d\) of \(p\)--local finite spectra \(F\) for which there is a self-map \(v: \Susp^N F \to F\), \(N \gg 0\) which induces multiplication by a unit in \(K(d)\)--homology and which is nilpotent in \(K(\ne d)\)--homology.  These are called ``finite spectra admitting \index{vd self map@\(v_d\)--self--map}\(v_d\)--self--maps''.\footnote{It is not obvious that \(\CatOf D_d\) satisfies the cofiber extension axiom of a thick subcategory.  One is required to show that for any map $f\co X \to Y$ of finite complexes of type \(d\), \(v_d\)--self--maps can be chosen on both $X$ and $Y$ which commute with $f$, which is another theorem of Hopkins and Smith~\cite[Theorem 11, Section 3]{HopkinsSmith}.}
 \end{itemize}
 
 \noindent The categories \(\CatOf D_d\) are the ones we are interested in analyzing, and we hope to identify these putative spectra \(V(d)\) inside of them.  Ravenel shows the following foothold interrelating the \(\CatOf C_d\):
@@ -1146,18 +1146,18 @@ We now work to show that this smash product lies in the thick subcategory \(\Cat
 
 Although this didn't affect the previous Theorem statement, one is led by its proof to wonder there exist such spectra $X \in \CatOf C_d \setminus \CatOf C_{d-1}$---i.e., whether these nested containments are proper.  The following result lays this to rest:
 
-\begin{theorem}[{Hopkins--Smith Periodicity Theorem, \cite[Theorem 4.11, Section 5, and Theorem 9]{HopkinsSmith}}]\label{CdEqualsDd}
+\begin{theorem}[{Hopkins--Smith Periodicity Theorem, \cite[Proposition 5.14, Theorem 9]{HopkinsSmith}}]\label{CdEqualsDd}
 A \(p\)--local finite spectrum is \(K(d-1)\)--acyclic exactly when it admits a \(v_d\)--self--map.  Additionally, the inclusion \(\CatOf C_d \subsetneq \CatOf C_{d-1}\) is proper.
 \end{theorem}
 \begin{proof}[Executive summary of proof]
-Given the classification of thick subcategories, if a property is closed under thickness then one need only exhibit a single spectrum with the property to know that all the spectra in the thick subcategory it generates also all have that property.  Inductively, they manually construct finite spectra \index{Moore spectrum}\(M_0(p^{i_0}, v_1^{i_1}, \ldots, v_{d-1}^{i_{d-1}})\) for sufficiently large\footnote{We ran into the asymptotic condition \(I \gg 0\) earlier, when we asserted that there is no root of the \(2\)--local \(v_1\)--self--map \(v\co M_8(2) \to M_0(2)\).} indices \(i_*\) which admit a self-map \(v\) governed by a commuting square
+Given the classification of thick subcategories, if a property is closed under thickness then one need only exhibit a single spectrum with the property to know that all the spectra in the thick subcategory it generates also all have that property.  Inductively, they manually construct finite spectra\footnote{They actually first construct spectra \(X_n\) with \(v_n\)--self--maps without attempting to constrain their \(BP\)--homology~\cite[Theorem 4.11]{HopkinsSmith}.} \index{Moore spectrum}\(M_0(p^{i_0}, v_1^{i_1}, \ldots, v_{d-1}^{i_{d-1}})\) for sufficiently large\footnote{We ran into the asymptotic condition \(I \gg 0\) earlier, when we asserted that there is no root of the \(2\)--local \(v_1\)--self--map \(v\co M_8(2) \to M_0(2)\).} indices \(i_*\) which admit a self-map \(v\) governed by a commuting square
 \begin{center}
 \begin{tikzcd}
 BP_* M_{|v_d| i_d}(p^{i_0}, v_1^{i_1}, \ldots, v_{d-1}^{i_{d-1}}) \arrow{r}{v} \arrow[equal]{d} & BP_* M_0(p^{i_0}, v_1^{i_1}, \ldots, v_{d-1}^{i_{d-1}}) \arrow[equal]{d} \\
 \Susp^{|v_d| i_d} BP_* / (p^{i_0}, v_1^{i_1}, \ldots, v_{d-1}^{i_{d-1}}) \arrow{r}{- \cdot v_d^{i_d}} & BP_* / (p^{i_0}, v_1^{i_1}, \ldots, v_{d-1}^{i_{d-1}}).
 \end{tikzcd}
 \end{center}
-These maps are guaranteed by very careful study of Adams spectral sequences.
+These maps are guaranteed by careful study of Adams spectral sequences.
 \end{proof}
 
 They therefore conclude the strongest possible positive response to Ravenel's conjectures.  Not only can we continue the sequence \[\S, \; \S/p, \; \S/(p, v), \; \ldots,\] but in fact \emph{any} finite spectrum admits an (essentially unique) interesting periodic self-map.  This may be the most remarkable of the statements: although Nishida's theorem initially led us to think of periodic self-maps as rare, they are in fact ubiquitous.  Additionally, we learned that the shift\footnote{This is sometimes referred to as the ``wavelength'' in the chromatic analogy.} of this self-map is determined by the first nonvanishing \(K(d)\)--homology, giving an effective detection tool.  Finally, all such periodicity shifts arise: for any \(d\), there is a spectrum admitting a \(v_d\)--self--map but no \(v_{<d}\)--self--maps.
@@ -1299,14 +1299,13 @@ The homotopy limit of the tower \[\cdots \to L_d F \to L_{d-1} F \to \cdots \to 
 In addition to furthering the analogy, \Cref{ChromaticConvergence} suggests a method for analyzing the homotopy groups of spheres: we could study the homotopy groups of each \(L_d \S\) and perform the reassembly process encoded by this inverse limit.  Additionally, \Cref{ChromaticFractureSquares} shows that this process is inductive: \(L_d \S\) can be understood in terms of the spectrum \(L_{d-1} \S\), the spectrum \(\widehat L_d \S\), and some gluing data in the form of \(L_{d-1} \widehat L_d \S\).  Hence, we become interested in the homotopy of \(\widehat L_d \S\), which is the target of the \(E_d\)--Adams spectral sequence considered in \Cref{StableContextLecture}.
 
 \begin{theorem}[{\Cref{IdentifyingAdamsE2Page} and \Cref{DefnChromaticHomologyThys}, see also \Cref{Pi2AndInvariantDiffls}, \Cref{DefnOfNilpCompletionAndASS}, and \Cref{FHGivesComodules}}]\label{ASSForLKdS}
-The \(E_d\)--based\index{Bockstein}\footnote{Although the \(K(d)\)--Adams spectral sequence more obviously targets \(\widehat L_d \S\), we have chosen to analyze the \(E_d\)--Adams spectral sequence above because \(K(d)\) fails to satisfy {\CH}.  Starting with \(BPP_0 BPP \cong BPP_0[t_0^{\pm}, t_1, t_2, \ldots]\) from \Cref{DefnChromaticHomologyThys} and \Cref{IdIsAnInvariantIdeal}, we can calculate \(E(d)P_0 E(d)P\) by base-changing this Hopf algebroid: \(E(d)P_0 E(d)P = E(d)P_0 \otimes_{BPP_0} BPP_0 BPP \otimes_{BPP_0} E(d)P_0\), which is again free over \(E(d)P_0\).  Since \(K(d)P\) is formed from \(E(d)P\) by quotienting by a regular sequence, we calculate that \(K(d)P_0 E(d)P\) is free over \(K(d)P_0\), generated by the same summands.  However, when quotienting by the regular sequence \emph{again} to form \(K(d)P_* K(d)P\), the maps in the quotient sequences act by elements in \(I_d = 0\), hence introduce Bocksteins.  The end result is \[K(d)P_* K(d)P = \left(K(d)P_* \otimes_{BPP_*} BPP_* BPP \otimes_{BPP_*} K(d)P_*\right) \otimes \Lambda[\tau_0, \ldots, \tau_{d-1}],\] where \(\tau_j\) in degree \(1\) controls the cofiber of \(E_d \xrightarrow{u_j} E_d\).  In this sense, \(E_d\) forms a kind of maximal deformation of \(K(d)P\) as a ring spectrum, since it exhausts the collection of \(K(d)P\) Bocksteins.  Additionally, this behavior of odd-degree classes is quite generic: whenever odd-primary information appears near the formal geometric picture, it seems to come from a poorly behaved homotopical quotient---some element was killed twice, say, or in some specific case a map was zero but is generically nonzero.  So it is here.}
-Adams spectral sequence for the sphere converges strongly to \(\pi_* \widehat L_d \S\).  Writing \(\omega\) for the line bundle on \((\moduli{fg})^\wedge_{\Gamma_d}\) of invariant differentials, we have
+The \(E_d\)--based\index{Bockstein}\footnote{Although the \(K(d)\)--Adams spectral sequence more obviously targets \(\widehat L_d \S\), we have chosen to analyze the \(E_d\)--Adams spectral sequence above because \(K(d)\) fails to satisfy {\CH}.  Starting with \(BPP_0 BPP \cong BPP_0[t_0^{\pm}, t_1, t_2, \ldots]\) from \Cref{DefnChromaticHomologyThys} and \Cref{IdIsAnInvariantIdeal}, we can calculate \(E(d)P_0 E(d)P\) by base-changing this Hopf algebroid: \(E(d)P_0 E(d)P = E(d)P_0 \otimes_{BPP_0} BPP_0 BPP \otimes_{BPP_0} E(d)P_0\), which is again free over \(E(d)P_0\).  Since \(K(d)P\) is formed from \(E(d)P\) by quotienting by a regular sequence, we calculate that \(K(d)P_0 E(d)P\) is free over \(K(d)P_0\), generated by the same summands.  However, when quotienting by the regular sequence \emph{again} to form \(K(d)P_* K(d)P\), the maps in the quotient sequences act by elements in \(I_d = 0\), hence introduce Bocksteins.  The end result is \[K(d)P_* K(d)P = \left(K(d)P_* \otimes_{BPP_*} BPP_* BPP \otimes_{BPP_*} K(d)P_*\right) \otimes \Lambda[\tau_0, \ldots, \tau_{d-1}],\] where \(\tau_j\) in degree \(1\) controls the cofiber of \(E_d \xrightarrow{u_j} E_d\).  In this sense, \(E_d\) forms a kind of maximal deformation of \(K(d)P\) as a ring spectrum, since it exhausts the collection of \(K(d)P\) Bocksteins.  Additionally, this behavior of odd-degree classes is quite generic: whenever odd-primary information appears near the formal geometric picture, it seems to come from a poorly behaved homotopical quotient---some element was killed twice, say, or in some specific case a map was zero but is generically nonzero.  So it is here.}\footnote{Baas and Madsen have calculated \(H\F_p^*(K(n)[0, \infty)) \cong \mathcal A^* \mmod \Lambda[Q_n]\), which also fits with this Bockstein philosophy (cf.\ also \Cref{kOASSExample})~\cite{BaasMadsen}, \cite[Proposition 4.9]{HopkinsSmith}.} Adams spectral sequence for the sphere converges strongly to \(\pi_* \widehat L_d \S\).  Writing \(\omega\) for the line bundle on \((\moduli{fg})^\wedge_{\Gamma_d}\) of invariant differentials, we have
 \[\pushQED{\qed}
 E_2^{*, *} = H^*((\moduli{fg})^\wedge_{\Gamma_d}; \omega^{\otimes *}) \Rightarrow \pi_* \widehat L_d \S. \qedhere
 \popQED\]
 \end{theorem}
 
-\noindent Our algebraic analysis from \Cref{LubinTateModuliThm} and \Cref{LubinTateModuliThmInFGLTerms} shows a further identification \[\context{E_d} = \left( \moduli{fg} \right)^\wedge_{\Gamma_d} \simeq \widehat{\mathbb A}^{d-1}_{\mathbb W(k)} \mmod \InternalAut(\Gamma_d).\]  This computation is thus boiled down to a calculation of the cohomology of the \(\Aut(\Gamma_d)\)--representations arising via \Cref{ActionBySnLiftsToLTn} as the global sections of the sheaves \(\omega^{\otimes *}\) (cf.\ the discussion in \Cref{HopfAlgebrasFromFiniteGroups} and \Cref{HF2HomologyIsValuedInAutGaEquivarModules}).\footnote{In fact, the stable \emph{operations} of \(E_d\) take the form of the twisted group-ring \(E_d^0 E_d = E_d^0\<\!\<\Aut(\Gamma_d)\>\!\>\).}  We will later deduce the following polite description of \(\Aut \Gamma_d\):
+\noindent Our algebraic analysis from \Cref{LubinTateModuliThm} and \Cref{LubinTateModuliThmInFGLTerms} shows a further identification \[\context{E_d} = \left( \moduli{fg} \right)^\wedge_{\Gamma_d} \simeq \widehat{\mathbb A}^{d-1}_{\mathbb W(k)} \mmod \InternalAut(\Gamma_d).\]  This computation is thus boiled down to a calculation of the cohomology of the \(\Aut(\Gamma_d)\)--representations arising via \Cref{ActionBySnLiftsToLTn} as the global sections of the sheaves \(\omega^{\otimes *}\) (cf.\ the discussion in \Cref{HopfAlgebrasFromFiniteGroups} and \Cref{HF2HomologyIsValuedInAutGaEquivarModules}).\footnote{In fact, the stable \emph{operations} of \(E_d\) form the twisted group-ring \(E_d^0 E_d = E_d^0\<\!\<\Aut(\Gamma_d)\>\!\>\).}  We will later deduce the following polite description of \(\Aut \Gamma_d\):
 \begin{theorem}[{cf.\ \Cref{FormOfStabilizerGroup}}]\label{FormOfStabilizerGroupEarly}
 \index{Lubin Tate stack@Lubin--Tate stack!stabilizer}For \(\Gamma_d\) the Honda formal group law of height \(d\) over a perfect field \(k\) of positive characteristic \(p\), we compute \[\Aut \Gamma_d \cong \left( \W_p(k) \<S\> \middle/ \left( \begin{array}{c} Sw = w^\phi S, \\ S^d = p \end{array} \right) \right)^\times,\] where \(\phi\) denotes a lift of the Frobenius from \(k\) to \(\W_p(k)\). \qed
 \end{theorem}
