--- a/main.bib
+++ b/main.bib
@@ -363,6 +363,17 @@ MRREVIEWER = {J. F. Adams},
        URL = {http://dx.doi.org/10.1016/0040-9383(64)90003-5},
 }
 
+@article{BaasMadsen,
+  title={On the realization of certain modules over the Steenrod algebra},
+  author={Baas, Nils Andreas and Madsen, Ib},
+  journal={Mathematica Scandinavica},
+  volume={31},
+  number={1},
+  pages={220--224},
+  year={1973},
+  publisher={JSTOR}
+}
+
 @article{BaezDolan,
   title={Euler characteristic versus homotopy cardinality},
   author={Baez, John},
