--- a/main.bib
+++ b/main.bib
@@ -2454,6 +2454,12 @@ MRREVIEWER = {J. Dieudonn{\'e}},
   note = {\url{http://www.math.harvard.edu/~lurie/252x.html}, Accessed: 2016-09-22}
 }
 
+@BOOK{LurieEllII,
+  author = {Lurie, Jacob},
+  title = {Elliptic Cohomology {II}: {O}rientations},
+  note = {\url{http://math.harvard.edu/~lurie/papers/Elliptic-II.pdf}, Accessed: 2018-02-04}
+}
+
 @BOOK{LurieHA,
   author = {Lurie, Jacob},
   title = {Higher Algebra},
