fix margin overflow in 2.5.8

--- a/quillen.tex
+++ b/quillen.tex
@@ -931,7 +931,7 @@ Writing \(\phi\) for the canonical Thom isomorphism associated to \(MU\)--cohomo
 \begin{align*}
 P^{C_n}(u_m) & = \phi(P^{C_n}(c_m(\xi_m))). \\
 \intertext{From here, we apply the splitting principle, multiplicativity of power operations, and application of the properties of Landweber--Novikov operations:}
-\phi(P^{C_n}(c_m(\xi_m))) & = \phi(P^{C_n}(c_1(\L_1) \cdots c_1(\L_m))) \\
+& = \phi(P^{C_n}(c_1(\L_1) \cdots c_1(\L_m))) \\
 & = \phi(P^{C_n}(c_1(\L_1)) \cdots P^{C_n}(c_1(\L_m))) \\
 & = \phi\left(\left(\sum_{|\alpha| \le 1} w^{1 - |\alpha|} a_\alpha(t) c_\alpha(\L_1)\right) \cdots \left( \sum_{|\alpha| \le 1} w^{1 - |\alpha|} a_\alpha(t) c_\alpha(\L_m) \right)\right) \\
 & = \phi\left(\sum_{|\alpha| \le m} w^{m - |\alpha|} a_\alpha(t) c_\alpha(\L_1 \oplus \cdots \oplus \L_m)\right) \\
