fix typos around the definition of v1 in pi_|v1| E/p

--- a/finite.tex
+++ b/finite.tex
@@ -1366,7 +1366,7 @@ so that we would arrive at a contradiction if the equation \(2a = 1\) were insol
 \end{example}
 
 \begin{example}[{\cite[Example 7.17 and Corollary 5.12]{Rezk512Notes}}]
-Take \(k\) to be a perfect field of positive characteristic \(p\), and take \(\Gamma\) over \(\Spec k\) to be a finite height formal group with associated Morava \(E\)--theory \(E_\Gamma\).  By smashing the unit map \(\S \to E_\Gamma\) with the mod--\(p\) Moore spectrum, we get an induced map of homotopy groups \[h_{2n}\co \pi_{2n} M_0(p) \to \pi_{2n} E_\Gamma/p.\]  We concluded as a consequence of \Cref{IdIsAnInvariantIdeal} that there is an invariant section \(v_1\) of \(\omega^{\otimes(p-1)}\) on \(\moduli{fg}^{\ge 1} \to \A^1\), and hence a preferred element of \(\pi_{2(p-1)} E_\Gamma\) which is natural in the choice of \(\Gamma\).  One might hope that these elements are the image of an element in \(\pi_{2(p-1)} M_0(p)\) under the Hurewicz map \(h\), and this turns out to be true: this element is called \(\alpha_{1/1}\).  This element furthermore turns out to be \(p\)--torsion, meaning it extends to a map
+Take \(k\) to be a perfect field of positive characteristic \(p\), and take \(\Gamma\) over \(\Spec k\) to be a finite height formal group with associated Morava \(E\)--theory \(E_\Gamma\).  By smashing the unit map \(\S \to E_\Gamma\) with the mod--\(p\) Moore spectrum, we get an induced map of homotopy groups \[h_{2n}\co \pi_{2n} M_0(p) \to \pi_{2n} E_\Gamma/p.\]  We concluded as a consequence of \Cref{IdIsAnInvariantIdeal} that there is an invariant section \(v_1\) of \(\omega^{\otimes(p-1)}\) on \(\moduli{fg}^{\ge 1}\), and hence a preferred element of \(\pi_{2(p-1)} E_\Gamma / p\) which is natural in the choice of \(\Gamma\).  One might hope that these elements are the image of an element in \(\pi_{2(p-1)} M_0(p)\) under the Hurewicz map \(h\), and this turns out to be true: this element is called \(\alpha_{1/1}\).  This element furthermore turns out to be \(p\)--torsion, meaning it extends to a map
 \begin{center}
 \begin{tikzcd}[row sep=1.2em]
 \S^{2(p-1)} \arrow["p"]{r} \arrow["0"']{rd} & \S^{2(p-1)} \arrow["\alpha_{1/1}"]{d} \arrow["\cofib"]{r} & M_{2(p-1)}(p) \arrow[densely dotted, "v"]{ld} \\
